<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPage">


    <Button
        android:id="@+id/finishRegButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#84E293"
        android:text="@string/registerButton"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassET"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/firstNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/firstNameLabel"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.256"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/regEmailLabel"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="@+id/lastNameET"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lastNameET"
        app:layout_constraintTop_toBottomOf="@+id/lastNameET" />

    <EditText
        android:id="@+id/firstNameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="eg: John"
        app:layout_constraintEnd_toEndOf="@+id/firstNameTV"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/firstNameTV"
        app:layout_constraintTop_toBottomOf="@+id/firstNameTV" />

    <EditText
        android:id="@+id/lastNameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="eg: Doe"
        app:layout_constraintEnd_toEndOf="@+id/lastNameTV"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lastNameTV"
        app:layout_constraintTop_toBottomOf="@+id/lastNameTV" />

    <TextView
        android:id="@+id/lastNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/lastNameLabel"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="@+id/firstNameET"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/firstNameET"
        app:layout_constraintTop_toBottomOf="@+id/firstNameET" />

    <TextView
        android:id="@+id/passTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/regPassLabel"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="@+id/regEmailET"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/regEmailET"
        app:layout_constraintTop_toBottomOf="@+id/regEmailET" />

    <EditText
        android:id="@+id/passET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/passTV"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passTV"
        app:layout_constraintTop_toBottomOf="@+id/passTV" />

    <EditText
        android:id="@+id/regEmailET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="eg: john.doe@yahoo.com"
        app:layout_constraintEnd_toEndOf="@+id/emailTV"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emailTV"
        app:layout_constraintTop_toBottomOf="@+id/emailTV" />

    <TextView
        android:id="@+id/confirmPassTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/regConfirmPassLabel"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="@+id/passET"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passET"
        app:layout_constraintTop_toBottomOf="@+id/passET" />

    <EditText
        android:id="@+id/confirmPassET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/confirmPassTV"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/confirmPassTV"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassTV" />

</androidx.constraintlayout.widget.ConstraintLayout>